force-app/main/default/objects/Account/fields/Novidea_HPC__Account_Legal_Name_Escaped__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Account_Legal_Name_Escaped__c</fullName>
    <description>escaping the &amp; char for perform purposes</description>
    <formula>SUBSTITUTE(Novidea_HPC__Account_Legal_Name__c , &apos;&amp;&apos;, &apos;&amp;amp;&apos;)</formula>
    <label>Account Legal Name Escaped</label>
    <type>Text</type>
</CustomField>