force-app/main/default/objects/Account/fields/Novidea_HPC__Account_Risk_Order_Completion__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Account_Risk_Order_Completion__c</fullName>
    <inlineHelpText>Complete Account Risk Order When It Is Empty</inlineHelpText>
    <label>Account Risk Order Completion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Ignore</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <label>Complete to 100%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>