force-app/main/default/objects/Account/fields/Novidea_HPC__Agreed_Date__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Agreed_Date__c</fullName>
    <description>TOBA Date Agreed</description>
    <label>Agreed Date</label>
    <type>Date</type>
</CustomField>