force-app/main/default/objects/Account/fields/Novidea_HPC__Allow_Compound_Section_Default__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Allow_Compound_Section_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Compound Section by Default</label>
    <type>Checkbox</type>
</CustomField>