force-app/main/default/objects/Account/fields/Novidea_HPC__Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The billing contact person</description>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>