force-app/main/default/objects/Account/fields/Novidea_HPC__Business_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Business_Effective_Date__c</fullName>
    <description>The date from which the business is effective</description>
    <label>Business Effective Date</label>
    <type>Date</type>
</CustomField>