force-app/main/default/objects/Account/fields/Novidea_HPC__Business_Lines_Description__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Business_Lines_Description__c</fullName>
    <label>Business Lines Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>