force-app/main/default/objects/Account/fields/Novidea_HPC__Client_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Client_Preferences__c</fullName>
    <description>JSON field, for internal processing.</description>
    <label>Client Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>