force-app/main/default/objects/Account/fields/Novidea_HPC__Collection_Manager__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Collection_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The default Collection manager for this account.
Will be automatically copied to any policy of this account</inlineHelpText>
    <label>Collection Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_Collection_Managed</relationshipName>
    <type>Lookup</type>
</CustomField>