force-app/main/default/objects/Account/fields/Novidea_HPC__Country_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Country_of_Registration__c</fullName>
    <description>The country the business is Registered</description>
    <label>Country of Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Israel</fullName>
                <default>true</default>
                <label>Israel</label>
            </value>
            <value>
                <fullName>United States of America</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>