force-app/main/default/objects/Account/fields/Novidea_HPC__Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Deactivation_Date__c</fullName>
    <label>Deactivation Date</label>
    <type>Date</type>
</CustomField>