force-app/main/default/objects/Account/fields/Novidea_HPC__DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__DUNS_Number__c</fullName>
    <description>DUNS Number</description>
    <label>DUNS Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>