force-app/main/default/objects/Account/fields/Novidea_HPC__Email__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>