force-app/main/default/objects/Account/fields/Novidea_HPC__External_Id__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__External_Id__c</fullName>
    <label>Deprecated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>