force-app/main/default/objects/Account/fields/Novidea_HPC__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__ExternalId__c</fullName>
    <description>Not using External_Id because its in use as a regular test field</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>