force-app/main/default/objects/Account/fields/Novidea_HPC__Foreign_Name__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Foreign_Name__c</fullName>
    <description>The foreign name Hebrew Vs English normaly</description>
    <label>Foreign Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>