force-app/main/default/objects/Account/fields/Novidea_HPC__Formation_Date__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Formation_Date__c</fullName>
    <description>The business incorporation/formation date</description>
    <label>Formation Date</label>
    <type>Date</type>
</CustomField>