force-app/main/default/objects/Account/fields/Novidea_HPC__Incidents2__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Incidents2__c</fullName>
    <label>Incidents2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>