force-app/main/default/objects/Account/fields/Novidea_HPC__Incidents4__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Incidents4__c</fullName>
    <label>Incidents4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>