force-app/main/default/objects/Account/fields/Novidea_HPC__License_Number__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__License_Number__c</fullName>
    <description>Currently serves for Surplus Lines Tax details (London Market: Trading Partners)</description>
    <inlineHelpText>Currently serves for Surplus Lines Tax details</inlineHelpText>
    <label>License Number</label>
    <type>TextArea</type>
</CustomField>