force-app/main/default/objects/Account/fields/Novidea_HPC__Logo__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Logo__c</fullName>
    <formula>IF(Novidea_HPC__Picture_Id__c != null,IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp;   Novidea_HPC__Picture_Id__c ,&apos;&apos;),HYPERLINK(&quot;/apex/UploadPicture?id=&quot; &amp; Id &amp; &quot;&amp;objectType=account&quot;,&quot;Upload Logo&quot;,&quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>