force-app/main/default/objects/Account/fields/Novidea_HPC__Market_Code__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Market_Code__c</fullName>
    <label>Market Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>5322</fullName>
                <label>AEGIS Managing Agency Limited (Aegis Syndicate 1225)</label>
            </value>
            <value>
                <fullName>336701</fullName>
                <label>AIG EUROPE LTD - UK (336701)</label>
            </value>
            <value>
                <fullName>400501</fullName>
                <label>AIG EUROPE LTD - UK (400501)</label>
            </value>
            <value>
                <fullName>336703</fullName>
                <label>AIG EUROPE SA (336703)</label>
            </value>
            <value>
                <fullName>400503</fullName>
                <label>AIG EUROPE SA (400503)</label>
            </value>
            <value>
                <fullName>336702</fullName>
                <label>AIG UK (336702)</label>
            </value>
            <value>
                <fullName>400502</fullName>
                <label>AIG UK (400502)</label>
            </value>
            <value>
                <fullName>404402</fullName>
                <label>AIIDAC MARINE</label>
            </value>
            <value>
                <fullName>V2035</fullName>
                <label>AIIDAC NON-MARINE</label>
            </value>
            <value>
                <fullName>R4003</fullName>
                <label>ALEA LONDON LTD</label>
            </value>
            <value>
                <fullName>382301</fullName>
                <label>ALLIANZ G C &amp; S (382301)</label>
            </value>
            <value>
                <fullName>382401</fullName>
                <label>ALLIANZ G C &amp; S (382401)</label>
            </value>
            <value>
                <fullName>A0900</fullName>
                <label>ALLIANZ GLOBAL</label>
            </value>
            <value>
                <fullName>5355</fullName>
                <label>Allied World Managing Agency Limited (Allied World Syndicate 2232)</label>
            </value>
            <value>
                <fullName>A5305</fullName>
                <label>AMPHITRITE UW LTD (A5305)</label>
            </value>
            <value>
                <fullName>A5404</fullName>
                <label>AMPHITRITE UW LTD (A5404)</label>
            </value>
            <value>
                <fullName>5323</fullName>
                <label>Antares Managing Agency Limited (Antares)</label>
            </value>
            <value>
                <fullName>5341</fullName>
                <label>Apollo Syndicate Management Limited (Apollo Syndicate 1969)</label>
            </value>
            <value>
                <fullName>A6402</fullName>
                <label>ARCH INSURANCE EU</label>
            </value>
            <value>
                <fullName>5348</fullName>
                <label>Arch Managing Agency Limited (Arch Syndicate at Lloyd&apos;s)</label>
            </value>
            <value>
                <fullName>5330</fullName>
                <label>Arch Managing Agency Limited (Arcus)</label>
            </value>
            <value>
                <fullName>5339</fullName>
                <label>Arch Managing Agency Limited (Barbican)</label>
            </value>
            <value>
                <fullName>A6204</fullName>
                <label>ARCH UK CASUALTY</label>
            </value>
            <value>
                <fullName>A6303</fullName>
                <label>ARCH UK MARINE</label>
            </value>
            <value>
                <fullName>A6105</fullName>
                <label>ARCH UK PROPERTY</label>
            </value>
            <value>
                <fullName>A5909</fullName>
                <label>ARE ZURICH (A&amp;H)</label>
            </value>
            <value>
                <fullName>5353</fullName>
                <label>Argenta Syndicate Management Limited (Argenta Syndicate)</label>
            </value>
            <value>
                <fullName>5354</fullName>
                <label>Argenta Syndicate Management Limited (Argenta Syndicate CSN)</label>
            </value>
            <value>
                <fullName>5319</fullName>
                <label>Argo Managing Agency Limited (ArgoGlobal Syndicate 1200)</label>
            </value>
            <value>
                <fullName>5336</fullName>
                <label>Argo Managing Agency Limited (Ariel Syndicate)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>