force-app/main/default/objects/Account/fields/Novidea_HPC__Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Organization_Type__c</fullName>
    <description>The Organization Business Type</description>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Not For Profit Org</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Subchapter &quot;S&quot; Corporation</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>