force-app/main/default/objects/Account/fields/Novidea_HPC__Picture_Id__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Picture_Id__c</fullName>
    <description>The id of the picture uploaded as the insurance plan image.</description>
    <label>Picture Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>