force-app/main/default/objects/Account/fields/Novidea_HPC__PIN_Code__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__PIN_Code__c</fullName>
    <description>Coverholder id</description>
    <label>PIN Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>