force-app/main/default/objects/Account/fields/Novidea_HPC__Premium_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Premium_Payment_Terms__c</fullName>
    <description>number of days to allow calculation of settlement due date</description>
    <label>Premium Payment Terms</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>