force-app/main/default/objects/Account/fields/Novidea_HPC__Producer__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Producer)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>