force-app/main/default/objects/Account/fields/Novidea_HPC__Source_Lead__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Source_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the source lead if there was one</description>
    <inlineHelpText>Captures the source lead if there was one</inlineHelpText>
    <label>Source Lead</label>
    <referenceTo>Novidea_HPC__Lead__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>