force-app/main/default/objects/Account/fields/Novidea_HPC__Source_Of_Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Source_Of_Payment_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primery Source of Payment Detail</description>
    <label>Source Of Payment Details</label>
    <referenceTo>Novidea_HPC__Source_Of_Payment_Details__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>