force-app/main/default/objects/Account/fields/Novidea_HPC__Status__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Bankrupt</fullName>
            </value>
            <value>
                <fullName>Left The Agency</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>