force-app/main/default/objects/Account/fields/Novidea_HPC__Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Status_Date__c</fullName>
    <description>The date status was changed</description>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>