force-app/main/default/objects/Account/fields/Novidea_HPC__Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Tax_ID__c</fullName>
    <description>EID = Employer ID Number.</description>
    <label>Tax ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>