force-app/main/default/objects/Account/fields/Novidea_HPC__total__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__total__c</fullName>
    <label>total Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>