force-app/main/default/objects/Account/fields/Novidea_HPC__Total_Claim_Close_this_Year__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Total_Claim_Close_this_Year__c</fullName>
    <label>Total Claim Close this Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>