force-app/main/default/objects/Account/fields/Novidea_HPC__total_of_Hours_invest_in_Claims__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__total_of_Hours_invest_in_Claims__c</fullName>
    <label>Total of Hours invest in Claims</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>