force-app/main/default/objects/Account/fields/Novidea_HPC__total_Open_Claim__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__total_Open_Claim__c</fullName>
    <description>מספר תביעות פתוחות</description>
    <label>total Open Claim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>