force-app/main/default/objects/Account/fields/NOVIPROD__Carrier_File_Code__c.field-meta.xml
<CustomField>
    <fullName>NOVIPROD__Carrier_File_Code__c</fullName>
    <label>Carrier File Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>