force-app/main/default/objects/Account/fields/NOVIPROD__Client_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>NOVIPROD__Client_Number_Prefix__c</fullName>
    <label>Client Number Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>