force-app/main/default/objects/Account/fields/NOVU__Dependency_Test__c.field-meta.xml
<CustomField>
    <fullName>NOVU__Dependency_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependency Test</label>
    <type>Checkbox</type>
</CustomField>