force-app/main/default/objects/Account/fields/NOVU__Field_Dependency_Test__c.field-meta.xml
<CustomField>
    <fullName>NOVU__Field_Dependency_Test__c</fullName>
    <label>Field Dependency Test</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NOVU__Dependency_Test__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>When False</fullName>
            </value>
            <value>
                <fullName>When True</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>