force-app/main/default/objects/Account/fields/NRMLZD_Income__c.field-meta.xml
<CustomField>
    <fullName>NRMLZD_Income__c</fullName>
    <label>NRMLZD Income</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>