force-app/main/default/objects/Account/fields/NRMLZD_Premium__c.field-meta.xml
<CustomField>
    <fullName>NRMLZD_Premium__c</fullName>
    <label>NRMLZD Premium</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>