force-app/main/default/objects/Account/fields/number_of_active_claims__c.field-meta.xml
<CustomField>
    <fullName>number_of_active_claims__c</fullName>
    <label>מספר תביעות פעילות</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>