force-app/main/default/objects/Account/fields/Number_Of_Active_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Active_Employees__c</fullName>
    <label>Number Of Active Employees</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>