force-app/main/default/objects/Account/fields/Number_Of_All_Other_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_All_Other_Employees__c</fullName>
    <label>Number Of All Other Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>