force-app/main/default/objects/Account/fields/Number_Of_Architects_As_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Architects_As_Employees__c</fullName>
    <label>Number Of Architects As Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>