force-app/main/default/objects/Account/fields/Number_of_employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_employees__c</fullName>
    <label>מס&apos; עובדים</label>
    <length>255</length>
    <type>Text</type>
</CustomField>