force-app/main/default/objects/Account/fields/NumberofemployeesintheUS__c.field-meta.xml
<CustomField>
    <fullName>NumberofemployeesintheUS__c</fullName>
    <label>מס&apos; עובדים בארה&quot;ב</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>עד 20</fullName>
            </value>
            <value>
                <fullName>20-50</fullName>
            </value>
            <value>
                <fullName>מעל 50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>