force-app/main/default/objects/Account/fields/Organization_Type_As_Multipick_For_Forms__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type_As_Multipick_For_Forms__c</fullName>
    <label>Organization Type As Multipick For Forms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>עוסק מורשה / עוסק זעיר</fullName>
            </value>
            <value>
                <fullName>שותפות רשומה</fullName>
            </value>
            <value>
                <fullName>שותפות לא רשומה</fullName>
            </value>
            <value>
                <fullName>חברה פרטית</fullName>
            </value>
            <value>
                <fullName>חברה ציבורית</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>