force-app/main/default/objects/Account/fields/Organization_Type_If_Else__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type_If_Else__c</fullName>
    <label>Organization Type If Else</label>
    <length>100</length>
    <type>Text</type>
</CustomField>