force-app/main/default/objects/Account/fields/Otzar_Interface__Employer_Id_Type__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Employer_Id_Type__c</fullName>
    <description>סוג מזהה חשבון	
1 = ח.פ
2 = ח.צ
3 = ת.ז 
4 = דרכון
5 = עוסק מורשה
6 = לא ידוע&quot;</description>
    <label>Employer Id Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ח.פ</fullName>
            </value>
            <value>
                <fullName>ח.צ</fullName>
            </value>
            <value>
                <fullName>ת.ז</fullName>
            </value>
            <value>
                <fullName>דרכון</fullName>
            </value>
            <value>
                <fullName>עוסק מורשה</fullName>
            </value>
            <value>
                <fullName>לא ידוע</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>