force-app/main/default/objects/Account/fields/Otzar_Interface__Employer_Number_in_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Employer_Number_in_Carrier__c</fullName>
    <description>מספר מעסיק ביצרן	מספר מזהה פנימי של המעסיק אצל היצרן.</description>
    <label>Employer Number in Carrier</label>
    <length>15</length>
    <type>Text</type>
</CustomField>