force-app/main/default/objects/Account/fields/Otzar_Interface__Is_Life__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Is_Life__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Life</label>
    <type>Checkbox</type>
</CustomField>