force-app/main/default/objects/Account/fields/Otzar_Interface__Last_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Last_Load_Date__c</fullName>
    <label>Last Load Date</label>
    <type>DateTime</type>
</CustomField>