force-app/main/default/objects/Account/fields/Owner_department__c.field-meta.xml
<CustomField>
    <fullName>Owner_department__c</fullName>
    <formula>text ( Owner.Custom_department__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner department</label>
    <type>Text</type>
</CustomField>