force-app/main/default/objects/Account/fields/Owner_division__c.field-meta.xml
<CustomField>
    <fullName>Owner_division__c</fullName>
    <formula>text ( Owner.Custom_division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner division</label>
    <type>Text</type>
</CustomField>