force-app/main/default/objects/Account/fields/Owner_Has_Changed__c.field-meta.xml
<CustomField>
    <fullName>Owner_Has_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Owner was not found in old system</inlineHelpText>
    <label>Owner Has Changed</label>
    <type>Checkbox</type>
</CustomField>