force-app/main/default/objects/Account/fields/P_C_Icon__c.field-meta.xml
<CustomField>
    <fullName>P_C_Icon__c</fullName>
    <formula>IF(Has_Business__c, IMAGE(&quot;https://howdenil--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0684G00000CgyQE&amp;operationContext=CHATTER&amp;contentId=05T4G00000cSZO6&quot;, &quot;has P &amp; C&quot;, $Setup.IconSize__c.small__c, $Setup.IconSize__c.small__c),IMAGE(&quot;https://howdenil--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0684G00000CgyQD&amp;operationContext=CHATTER&amp;contentId=05T4G00000cSZNr&quot;,&quot;Does not have P &amp; C&quot;, $Setup.IconSize__c.small__c, $Setup.IconSize__c.small__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P &amp; C</label>
    <type>Text</type>
</CustomField>