force-app/main/default/objects/Account/fields/PDHPC__Account_Details__c.field-meta.xml
<CustomField>
    <fullName>PDHPC__Account_Details__c</fullName>
    <label>Account Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>