force-app/main/default/objects/Account/fields/PDHPC__Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>PDHPC__Bank_Code__c</fullName>
    <label>Bank Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>