force-app/main/default/objects/Account/fields/PDHPC__Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>PDHPC__Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>