force-app/main/default/objects/Account/fields/PDHPC__Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>PDHPC__Branch_Number__c</fullName>
    <label>Branch Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>